--- a/hsvcolorselector/src/main/AndroidManifest.xml
+++ b/hsvcolorselector/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest package="com.user.derekpoon.hsvcolorselector"
-          xmlns:android="http://schemas.android.com/apk/res/android"/>
+<manifest package="com.user.derekpoon.hsvcolorselector" />
